Album stampati in html

--- a/index.html
+++ b/index.html
@@ -26,14 +26,8 @@
             </div>
         </header>
 
-        <div class="cds-container container">
-            <!-- Disco ad esempio -->
-            <div class="cd">
-                <img src="https://upload.wikimedia.org/wikipedia/en/9/9f/Ten_Summoner%27s_Tales.jpg" alt="">
-                <h3>Ten's Summoners Tales</h3>
-                <span class="author">Sting</span>
-                <span class="year">1993</span>
-            </div>
+        <div id="cds-container" class="cds-container container">
+            
         </div>
 
 
