--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
             <div class="container">
                 <img src="logo.png" alt="logo" />
             </div>
+            <nav>
+              <label for="genre-select">Filtra per genere</label>
+              <select id="genre-select" name="genre-select">
+                <option value="tutti" selected>Tutti</option>
+                <option value="Rock">Rock</option>
+                <option value="Pop">Pop</option>
+                <option value="Metal">Metal</option>
+                <option value="Jazz">Jazz</option>
+              </select>
+            </nav>
         </header>
 
         <div id="cds-container" class="cds-container container">
-            
+
         </div>
 
 
