bonus con filter

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="container">
                 <img src="logo.png" alt="logo" />
             </div>
+            <!-- BONUS -->
             <nav>
               <label for="genre-select">Filtra per genere</label>
               <select id="genre-select" name="genre-select">
